Fixed Gui, packages and added some libraries
Radiobuttons are not longer used in the proyect, instead i use ComboBoxes in order to make an easier use of the app, also, it will avoid issues with exceptions.

The classes now are in their correct package.

Added Material library, swing material library, JCore library and a self made library for gui components( and the oceanic look and feel).

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/BODEGA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.libreria.jar=C:\\Users\\_Quetzally_\\Documents\\NetBeansProjects\\libreria\\dist\\libreria.jar
+file.reference.material-ui-swing-1.0.3.jar=C:\\Users\\_Quetzally_\\Downloads\\material-ui-swing-1.0.3.jar
+file.reference.MaterialComponents.jar=C:\\Users\\_Quetzally_\\Downloads\\MaterialComponents.jar
+file.reference.timingframework-core-5.0.0.jar=C:\\Users\\_Quetzally_\\Downloads\\timingframework-core-5.0.0.jar
+file.reference.timingframework-swing-5.0.0.jar=C:\\Users\\_Quetzally_\\Downloads\\timingframework-swing-5.0.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.material-ui-swing-1.0.3.jar}:\
+    ${file.reference.MaterialComponents.jar}:\
+    ${file.reference.timingframework-core-5.0.0.jar}:\
+    ${file.reference.timingframework-swing-5.0.0.jar}:\
+    ${file.reference.libreria.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
